Fixed RF Model with addons like Dataset balancing.

--- a/Term Project Code Final.ipynb
+++ b/Term Project Code Final.ipynb
@@ -10788,28 +10788,33 @@
       ],
       "source": [
         "# Define features (X) and target (y) - binary classification on 'Money Laundering Risk Score'\n",
-        "X_new = df_RF.drop(columns=['Money Laundering Risk Score'])\n",
-        "y_new = (df_RF['Money Laundering Risk Score'] >= 5).astype(int)  # Binary target: 1 if score >= 5, else 0\n",
+        "X = df_RF.drop(columns=['Source of Money'])  # Features\n",
+        "y = df_RF['Source of Money']  # Target (0: Illegal, 1: Legal)\n",
         "\n",
-        "# Split the dataset into training and testing sets\n",
-        "X_train_new, X_test_new, y_train_new, y_test_new = train_test_split(X_new, y_new, test_size=0.3, random_state=42)\n",
+        "# Split the data into training and testing sets\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
         "\n",
-        "# Initialize and train the RandomForest classifier\n",
-        "rf_clf_new = RandomForestClassifier(n_estimators=100, random_state=42)\n",
-        "rf_clf_new.fit(X_train_new, y_train_new)\n",
+        "# Initialize and train the RandomForestClassifier\n",
+        "rf_model = RandomForestClassifier(random_state=42)\n",
+        "rf_model.fit(X_train, y_train)\n",
         "\n",
         "# Make predictions on the test set\n",
-        "y_pred_new = rf_clf_new.predict(X_test_new)\n",
+        "y_pred = rf_model.predict(X_test)\n",
         "\n",
-        "# Generate the confusion matrix and classification report\n",
-        "conf_matrix_new = confusion_matrix(y_test_new, y_pred_new)\n",
-        "class_report_new = classification_report(y_test_new, y_pred_new)\n",
+        "# Evaluate the model using classification report\n",
+        "classification_report_result = classification_report(y_test, y_pred)\n",
+        "onf_matrix = confusion_matrix(y_test, y_pred)\n",
         "\n",
-        "# Display the results\n",
-        "print(\"Confusion Matrix:\")\n",
-        "print(conf_matrix_new)\n",
-        "print(\"\\nClassification Report:\")\n",
-        "print(class_report_new)"
+        "\n",
+        "print(onf_matrix)\n",
+        "print(classification_report_result)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Weight Balancing"
       ]
     },
     {
@@ -10829,21 +10834,26 @@
         }
       ],
       "source": [
-        "rf_clf_balanced = RandomForestClassifier(n_estimators=100, random_state=42, class_weight='balanced')\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
         "\n",
-        "# Train the model\n",
-        "rf_clf_balanced.fit(X_train_new, y_train_new)\n",
+        "# Initialize and train the RandomForestClassifier with balanced class weights\n",
+        "rf_model = RandomForestClassifier(random_state=42, class_weight='balanced')\n",
+        "rf_model.fit(X_train, y_train)\n",
         "\n",
-        "# Make predictions\n",
-        "y_pred_balanced = rf_clf_balanced.predict(X_test_new)\n",
+        "# Make predictions on the test set\n",
+        "y_pred = rf_model.predict(X_test)\n",
         "\n",
-        "# Evaluate the model\n",
-        "conf_matrix_balanced = confusion_matrix(y_test_new, y_pred_balanced)\n",
-        "class_report_balanced = classification_report(y_test_new, y_pred_balanced)\n",
+        "# Evaluate the model using classification report\n",
+        "classification_report_result = classification_report(y_test, y_pred)\n",
         "\n",
-        "# Print results\n",
-        "print(\"Confusion Matrix:\\n\", conf_matrix_balanced)\n",
-        "print(\"Classification Report:\\n\", class_report_balanced)"
+        "print(classification_report_result)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### RF With Dataset Balancing including Test sets(Much better results)"
       ]
     },
     {
@@ -10877,49 +10887,110 @@
         }
       ],
       "source": [
-        "# Split the dataset into training and testing sets\n",
-        "X_train_new, X_test_new, y_train_new, y_test_new = train_test_split(X_new, y_new, test_size=0.3, random_state=42)\n",
+        "from sklearn.utils import resample\n",
         "\n",
-        "# Define a simplified parameter grid for GridSearchCV\n",
-        "simple_param_grid = {\n",
-        "    'n_estimators': [100, 200],\n",
-        "    'max_depth': [10, 20],\n",
-        "    'min_samples_split': [2, 5],\n",
-        "    'min_samples_leaf': [1, 2],\n",
-        "    'bootstrap': [True, False]\n",
+        "# Combine the feature and target data\n",
+        "df_combined = pd.concat([X, y], axis=1)\n",
+        "\n",
+        "# Separate the classes (0: Illegal, 1: Legal)\n",
+        "df_illegal = df_combined[df_combined['Source of Money'] == 0]\n",
+        "df_legal = df_combined[df_combined['Source of Money'] == 1]\n",
+        "\n",
+        "# Upsample the minority class (legal money)\n",
+        "df_legal_upsampled = resample(df_legal, \n",
+        "                              replace=True,     # Sample with replacement\n",
+        "                              n_samples=len(df_illegal),  # Match number of illegal samples\n",
+        "                              random_state=42)\n",
+        "\n",
+        "# Combine the upsampled legal class with the illegal class\n",
+        "df_balanced = pd.concat([df_illegal, df_legal_upsampled])\n",
+        "\n",
+        "# Separate the balanced dataset into features and target\n",
+        "X_balanced = df_balanced.drop(columns=['Source of Money'])\n",
+        "y_balanced = df_balanced['Source of Money']\n",
+        "\n",
+        "# Split the balanced data into training and testing sets\n",
+        "X_train_balanced, X_test_balanced, y_train_balanced, y_test_balanced = train_test_split(X_balanced, y_balanced, test_size=0.3, random_state=42)\n",
+        "\n",
+        "# Train the RandomForestClassifier on the balanced data\n",
+        "rf_model_balanced = RandomForestClassifier(random_state=42)\n",
+        "rf_model_balanced.fit(X_train_balanced, y_train_balanced)\n",
+        "\n",
+        "# Make predictions on the test set\n",
+        "y_pred_balanced = rf_model_balanced.predict(X_test_balanced)\n",
+        "\n",
+        "# Evaluate the model using classification report\n",
+        "classification_report_balanced = classification_report(y_test_balanced, y_pred_balanced)\n",
+        "onf_matrix = confusion_matrix(y_test_balanced, y_pred_balanced)\n",
+        "\n",
+        "print(onf_matrix)\n",
+        "print(classification_report_balanced)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Finetuning Using GridSearchCV"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.model_selection import GridSearchCV\n",
+        "\n",
+        "# Define the parameter grid to search over\n",
+        "param_grid = {\n",
+        "    'n_estimators': [100, 200, 300],\n",
+        "    'max_depth': [10, 20, None],\n",
+        "    'min_samples_split': [2, 5, 10],\n",
+        "    'min_samples_leaf': [1, 2, 4]\n",
         "}\n",
         "\n",
-        "# Initialize the RandomForest model\n",
-        "rf_clf_simplified = RandomForestClassifier(random_state=42)\n",
+        "# Initialize the GridSearchCV object with RandomForestClassifier\n",
+        "grid_search = GridSearchCV(estimator=rf_model_balanced, param_grid=param_grid, cv=5, n_jobs=-1, verbose=2)\n",
         "\n",
-        "# Set up the GridSearchCV\n",
-        "simple_grid_search = GridSearchCV(estimator=rf_clf_simplified,\n",
-        "                                  param_grid=simple_param_grid,\n",
-        "                                  cv=3,  # 3-fold cross-validation\n",
-        "                                  verbose=1,\n",
-        "                                  n_jobs=-1)\n",
+        "# Fit the model using grid search\n",
+        "grid_search.fit(X_train_balanced, y_train_balanced)\n",
         "\n",
-        "# Fit the simplified grid search model\n",
-        "simple_grid_search.fit(X_train_new, y_train_new)\n",
+        "# Get the best parameters and best score from the grid search\n",
+        "best_params = grid_search.best_params_\n",
+        "best_score = grid_search.best_score_\n",
         "\n",
-        "# Best hyperparameters from the grid search\n",
-        "best_params_simplified = simple_grid_search.best_params_\n",
+        "best_params, best_score"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "best_rf_model = RandomForestClassifier(\n",
+        "    n_estimators=best_params['n_estimators'],\n",
+        "    max_depth=best_params['max_depth'],\n",
+        "    min_samples_split=best_params['min_samples_split'],\n",
+        "    min_samples_leaf=best_params['min_samples_leaf'],\n",
+        "    random_state=42\n",
+        ")\n",
         "\n",
-        "# Train the best model on the training set\n",
-        "best_rf_model_simplified = simple_grid_search.best_estimator_\n",
-        "best_rf_model_simplified.fit(X_train_new, y_train_new)\n",
+        "# Fit the model to the balanced training data\n",
+        "best_rf_model.fit(X_train_balanced, y_train_balanced)\n",
         "\n",
-        "# Make predictions with the tuned model\n",
-        "y_pred_tuned_simplified = best_rf_model_simplified.predict(X_test_new)\n",
+        "# Make predictions on the original (unbalanced) test set\n",
+        "y_pred_best = best_rf_model.predict(X_test)\n",
         "\n",
-        "# Generate confusion matrix and classification report for the tuned model\n",
-        "conf_matrix_tuned_simplified = confusion_matrix(y_test_new, y_pred_tuned_simplified)\n",
-        "class_report_tuned_simplified = classification_report(y_test_new, y_pred_tuned_simplified)\n",
+        "# Evaluate the model using classification report and confusion matrix\n",
+        "classification_report_best = classification_report(y_test, y_pred_best)\n",
+        "conf_matrix_best = confusion_matrix(y_test, y_pred_best)\n",
         "\n",
-        "# Output best parameters, confusion matrix, and classification report\n",
-        "print(\"Best Hyperparameters:\", best_params_simplified)\n",
-        "print(\"Confusion Matrix:\\n\", conf_matrix_tuned_simplified)\n",
-        "print(\"Classification Report:\\n\", class_report_tuned_simplified)"
+        "print(\"Confusion Matrix:\")\n",
+        "print(conf_matrix_best)\n",
+        "print(\"\\nClassification Report:\")\n",
+        "print(classification_report_best)"
       ]
     },
     {
