Added Feature Selection Results

--- a/Term Project Code Final.ipynb
+++ b/Term Project Code Final.ipynb
@@ -10931,6 +10931,52 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "### Feature Selection Trained RF"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Specify the number of features to select\n",
+        "num_feats = 10  # You can adjust this based on your preference\n",
+        "\n",
+        "# Run feature selection with the methods you prefer\n",
+        "methods = ['pearson', 'chi-square', 'rfe', 'log-reg', 'rf', 'lgbm']\n",
+        "\n",
+        "# Run the feature selector\n",
+        "best_features, feature_selection_df = autoFeatureSelector(X_train_balanced, y_train_balanced, num_feats, methods)\n",
+        "\n",
+        "# Show the selected best features and the detailed feature selection table\n",
+        "print(\"Best features selected:\", best_features)\n",
+        "\n",
+        "# Use the selected features for training the model\n",
+        "X_train_selected = X_train_balanced[best_features]\n",
+        "X_test_selected = X_test[best_features]\n",
+        "\n",
+        "# Train the RandomForestClassifier with the selected features\n",
+        "rf_model_selected = RandomForestClassifier(random_state=42)\n",
+        "rf_model_selected.fit(X_train_selected, y_train_balanced)\n",
+        "\n",
+        "# Make predictions on the test set with selected features\n",
+        "y_pred_selected = rf_model_selected.predict(X_test_selected)\n",
+        "\n",
+        "# Evaluate the model\n",
+        "classification_report_selected = classification_report(y_test, y_pred_selected)\n",
+        "conf_matrix_selected = confusion_matrix(y_test, y_pred_selected)\n",
+        "\n",
+        "print(\"Confusion Matrix:\")\n",
+        "print(conf_matrix_selected)\n",
+        "print(\"\\nClassification Report:\")\n",
+        "print(classification_report_selected)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "### Finetuning Using GridSearchCV"
       ]
     },
